--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-pip install -e git+https://github.com/openai/CLIP.git@main#egg=clip
-pip install -e git+https://github.com/pharmapsychotic/BLIP.git@lib#egg=blip
-pip install clip-interrogator
+git+https://github.com/openai/CLIP.git@main#egg=clip
+git+https://github.com/pharmapsychotic/BLIP.git@lib#egg=blip
+clip-interrogator
