--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools_rust
 git+https://github.com/openai/CLIP.git@main#egg=clip
 git+https://github.com/pharmapsychotic/BLIP.git@lib#egg=blip
 clip-interrogator
